# biotraj

./: .gitignore  README.rst  basesetup.py  convert_h5_to_npz.py  environment.yml  mdtraj_fetch_traj_h5_to_xtc.py  pyproject.toml  pyproject_hatch_cython  setup.py
.github/workflows/: test_and_deploy.yml
src/biotraj/: __init_.py  __init__.c  __init__.py  netcdf.py  version.py
src/biotraj/core/: element.py  selection.py  topology.py  trajectory.py
src/biotraj/formats/: .gitignore  __init__.c  __init__.py  amberrst.py  arc.py  dcd.pyx  dtr.pyx  dtrlib.pxd  gro.py  gsd.py  hdf5.py  hoomdxml.py  lammpstrj.py  lh5.py  mdcrd.py  mol2.py  netcdf.py  openmmxml.py  pdbx.py  prmtop.py  psf.py  trr.pyx  xtc.pyx  xyzfile.py
src/biotraj/formats/dcd/: .gitignore  dcd.pyx
src/biotraj/formats/pdb/: __init__.py  pdbfile.py  pdbstructure.py
src/biotraj/formats/xtc/: .gitignore  trr.pyx  xtc.pyx
src/biotraj/geometry/: alignment.py  angle.py  contact.py  dihedral.py  distance.py  drid.pyx  dssp.py  hbond.py  internal.py  neighborlist.pyx  neighbors.pyx  order.py  rdf.py  sasa.py  shape.py  thermodynamic_properties.py
src/biotraj/scripts/: mdconvert.py  mdinspect.py
src/biotraj/utils/: __init__.py  delay_import.py  unitcell.py  validation.py
src/biotraj/utils/unit/: __init__.py  baseunit.py  mymatrix.py  prefix.py  quantity.py  unit.py  unit_definitions.py  unit_operators.py
test/: test_dcd.py  test_netcdf.py  test_traj_readers.py  test_trr.py  test_xtc.py  util.py
test/data/: frame0.dcd.npz  transferred_test_trr.trr
tests/: test_dcd.py  test_mdconvert.pyt  test_netcdf.py  test_traj_readers.py  test_trajectory.py  test_trr.py  test_version.py  test_xtc.py  util.py
tests/data/: frame0.xtc.npz  traj_prep.xtc
