[project]
name = "biotraj"
requires-python = ">=3.10"
description = "A comprehensive library for computational molecular biology"
readme = "README.rst"
authors = [
  {name = "Robert McGibbon"},
  {name = "The Biotite contributors"},
]
license = {"file" = "LICENSE.rst"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "requests >= 2.12",
  "numpy >= 2.0",
  "msgpack >= 0.5.6",
  "networkx >= 2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.urls]
homepage = "https://www.biotite-python.org"
repository = "https://github.com/biotite-dev/biotraj"
documentation = "https://www.biotite-python.org"

[tool.ruff]
exclude = [
  "*.txt",
  "*.fasta",
  "*.fa",
  "*.fastq",
  "*.fq",
  "*.gb",
  "*.gp",
  "*.gff",
  "*.gff3",
  "*.pdb",
  "*.cif",
  "*.bcif",
  "*.gro",
  "*.sdf",
  "*.xtc",
  "*.mmtf",
  "*.npz",
]
force-exclude = true

[tool.ruff.lint]
# pyflakes, pycodestyle isort and varibale naming
select = ["F", "E", "W", "I", "N"]
ignore = [
    # In docstrings long lines are often intentional
    # Most other ocassions are caught by the ruff formatter
    "E501",
    # Due to * imports in `__init__.py` modules
    "F403",
]

[tool.ruff.lint.isort]
known-first-party = ["biotraj"]

[tool.hatch.build.targets.sdist]
exclude = [
  "tests",
  "doc",
  "environment.yml",
  "setup_ccd.py",
  # .github, .gitignore, .gitattributes
  ".git*",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/biotraj/version.py"

[tool.hatch.build.targets.wheel.hooks.cython]
dependencies = ["hatch-cython"]

[tool.hatch.build.targets.wheel.hooks.cython.options]
include_numpy = true
compile_py = false
# include .h or .cpp directories
includes = ["src/biotraj/xtc/src", "src/biotraj/xtc/include"]

[build-system]
requires = [
    "hatchling",
    "hatch-vcs == 0.4",
    "hatch-cython == 0.5",
    "oldest-supported-numpy",
    "cython >= 3.0",
]
build-backend = "hatchling.build"
