[project]
name = "biotraj"
requires-python = ">=3.10"
description = "Basic trajectory file format functionality for Biotite; forked from MDTraj"
readme = "README.rst"
authors = [
  {name = "Robert McGibbon"},
  {name = "The Biotite contributors"},
]
license = {"file" = "LICENSE.rst"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "requests >= 2.12",
  "numpy >= 2.0",
  "msgpack >= 0.5.6",
  "networkx >= 2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.urls]
homepage = "https://www.biotite-python.org"
repository = "https://github.com/biotite-dev/biotraj"
documentation = "https://www.biotite-python.org"

[tool.ruff]
exclude = [
  "*.txt",
  "*.fasta",
  "*.fa",
  "*.fastq",
  "*.fq",
  "*.gb",
  "*.gp",
  "*.gff",
  "*.gff3",
  "*.pdb",
  "*.cif",
  "*.bcif",
  "*.gro",
  "*.sdf",
  "*.xtc",
  "*.mmtf",
  "*.npz",
]
force-exclude = true

[tool.ruff.lint]
# pyflakes, pycodestyle isort and varibale naming
select = ["F", "E", "W", "I", "N"]
ignore = [
    # In docstrings long lines are often intentional
    # Most other ocassions are caught by the ruff formatter
    "E501",
    # Due to * imports in `__init__.py` modules
    "F403",
    # Additional necessary exceptions to remain comparable with MDTraj
    "F401",
    "F405",
    "N801",
    "N802",
    "N803",
    "N806",
    "N813",
    "N815",
    "N816",
    "N818",
]

[tool.ruff.lint.isort]
known-first-party = ["biotraj"]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy >= 2.0",
    "Cython >= 3.0"
]
